CMAKE_MINIMUM_REQUIRED(VERSION 3.10 FATAL_ERROR)

PROJECT(mp)

IF (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
ENDIF ()
MESSAGE(STATUS "Build type set to ${CMAKE_BUILD_TYPE}")

SET_PROPERTY(DIRECTORY PROPERTY EP_BASE ${CMAKE_BINARY_DIR}/subprojects)
SET(STAGED_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/stage)
SET(DIR_EP_BASE ${CMAKE_BINARY_DIR}/subprojects)
SET(CODE_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/code)


ADD_SUBDIRECTORY(code)
